--- a/config/vehicle.ini
+++ b/config/vehicle.ini
@@ -29,3 +29,17 @@ model_path=~/mydonkey/models/default.h5
 [mydonkey]
 path = ~/mydonkey
 folders = sessions,models,results,datasets
+
+# constants for things
+[constants]
+res_length=680
+res_width=480
+frame_rate=50
+drive_loop_delay=0.5
+min_radius=30
+max_radius=80
+min_throttle=0.3
+max_throttle=0.4
+angle_blob=640
+blur_anchor_x=5
+blur_anchor_y=5
